Fix bug#13392 Wrong VALUES() behaviour in INSERT SELECT with ON DUPLICATE

VALUES() can only refer to table insert going to. 
But Item_insert_value::fix_fields() were passing to it's arg full table list,
This results in finding second column which shouldn't be found, and
failing with error about ambiguous field.

Item_insert_value::fix_fields() now passes only first table of full table
list.


sql/item.cc:
  Fix bug #14016 date_format() 2nd parameter was compared using case insensitive collation.
  If second parameter of date_format() is constant then it's collation is changed to case sensitive.
mysql-test/r/insert_select.result:
  Test case for bug#14016 2nd parameter was compared using case insensitive collation
mysql-test/t/insert_select.test:
  Test case for bug#14016 2nd parameter was compared using case insensitive collation